#87 added ISQLStatmentsExecuterService
